initial styling with css answer key

--- a/index.html
+++ b/index.html
@@ -3,80 +3,82 @@
 <head>
 	<meta charset="UTF-8">
 	<title>LadyDev Floral</title>
+	<link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-	<div class="container">
-		<div class="navbar">
-			<ul id="menu">
-				<li><a href="#">Home</a></li>
-				<li><a href="#products">Produts</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</div>
-		<div class="main">
-			<div class="row hero" id="about">
+	<nav class="navbar">
+		<ul id="menu">
+			<li><a href="#">Home</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#products">Produts</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</nav>
+	<div class="main">
+		<div class="row hero" id="about">
+			<div class="head">
 				<h1>LadyDev Flower Shop</h1>
 				<h2>Making development more beautiful every day!</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique, in eaque, repellendus expedita quod quasi cupiditate assumenda id, doloribus iste neque impedit dolore! Sunt ipsum dolorem voluptates error quos?</p>
 			</div>
-			<div class="row" id="products">
-				<ul class="products">
-				    <li>
-				    	<a href="#"><img src="" alt=""></a>
-				        <h2>Iris</h2>
-				        <p>This is a description about the flower.  It gives some floral information.</p>
-				    </li>
-				    <li>
-				    	<a href="#"><img src="" alt=""></a>
-				        <h2>Peony</h2>
-				        <p>This is a description about the flower.  It gives some floral information.</p>
-				    </li>
-				    <li>
-				    	<a href="#"><img src="" alt=""></a>
-				        <h2>Tulip</h2>
-				        <p>This is a description about the flower.  It gives some floral information.</p>
-				    </li>
-				    <li>
-				    	<a href="#"><img src="" alt=""></a>
-				    	<h2>Anemone</h2>
-				        <p>This is a description about the flower.  It gives some floral information.</p>
-				    </li>
-				    <li>
-				    	<a href="#"><img src="" alt=""></a>
-				        <h2>Hydrangea</h2>
-				        <p>This is a description about the flower.  It gives some floral information.</p>
-				    </li>
-				    <li>
-				    	<a href="#"><img src="" alt=""></a>
-				        <h2>Dahlia</h2>
-				        <p>This is a description about the flower.  It gives some floral information.</p>
-				    </li>
-				    <li>
-				    	<a href="#"><img src="" alt=""></a>
-				        <h2>Ranunculus</h2>
-				        <p>This is a description about the flower.  It gives some floral information.</p>
-				    </li>
-				</ul>
-				<div class="aside">
-					<h2>Customer Favorites</h2>
-					<ol>
-						<li>Peony</li>
-						<li>Anemone</li>
-						<li>Tulip</li>
-					</ol>
-				</div>
-			</div>
 		</div>
-		<div class="row footer" id="contact">
-			<p>The earth laughs in flowers. ~Ralph Waldo Emerson</p>
-			<ul>
-				<li><a href="http://facebook.com/ladydevfloral"><img src="fb.png" alt=""></a></li>
-				<li><a href="http://twitter.com/ladydevfloral"><img src="twitter.png" alt=""></a></li>
-				<li><a href="http://instagram.com/ladydevfloral"><img src="instagram.png" alt=""></a></li>
-				<li><a href="mailto:ladydevfloral@example.com"><img src="email.png" alt=""></a></li>
+		<div class="row products" id="products">
+			<h2>Products</h2>
+			<ul class="products">
+			    <li class="item">
+			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
+			        <h3 class="head">Iris</h3>
+			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
+			    </li>
+			    <li class="item">
+			    	<a href="#"><img src="assets/images/peony.jpeg" alt=""></a>
+			        <h3 class="head">Peony</h3>
+			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
+			    </li>
+			    <li class="item">
+			    	<a href="#"><img src="assets/images/tulip.jpg" alt=""></a>
+			        <h3 class="head">Tulip</h3>
+			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
+			    </li>
+			    <li class="item">
+			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
+			    	<h3 class="head">Anemone</h3>
+			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
+			    </li>
+			    <li class="item">
+			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
+			        <h3 class="head">Hydrangea</h3>
+			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
+			    </li>
+			    <li class="item">
+			    	<a href="#"><img src="assets/images/dahlia.jpg" alt=""></a>
+			        <h3 class="head">Dahlia</h3>
+			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
+			    </li>
+			    <li class="item">
+			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
+			        <h3 class="head">Ranunculus</h3>
+			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
+			    </li>
 			</ul>
 		</div>
+		<div class="sidebar">
+			<h2>Customer Favorites</h2>
+			<ol>
+				<li>Peony</li>
+				<li>Anemone</li>
+				<li>Tulip</li>
+			</ol>
+		</div>
 	</div>
+	<footer id="contact">
+		<p>&copy; 2016 LadyDev Flower Shop</p>
+		<ul>
+			<li><a href="http://facebook.com/ladydevfloral"><img src="assets/images/fb.png" alt=""></a></li>
+			<li><a href="http://twitter.com/ladydevfloral"><img src="assets/images/twitter.png" alt=""></a></li>
+			<li><a href="http://instagram.com/ladydevfloral"><img src="assets/images/instagram.png" alt=""></a></li>
+			<li><a href="mailto:ladydevfloral@example.com"><img src="assets/images/email.png" alt=""></a></li>
+		</ul>
+	</footer>
 </body>
 </html>
