Adds CSS styling

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<title>LadyDev Floral</title>
 	<link rel="stylesheet" href="assets/css/styles.css">
+	<link href='https://fonts.googleapis.com/css?family=Pacifico|Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav class="navbar">
 		<ul id="menu">
 			<li><a href="#">Home</a></li>
 			<li><a href="#about">About</a></li>
-			<li><a href="#products">Produts</a></li>
+			<li><a href="#products">Products</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
@@ -25,44 +26,44 @@
 		<div class="row products" id="products">
 			<h2>Products</h2>
 			<ul class="products">
-			    <li class="item">
+			    <li class="item clearfix">
 			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
 			        <h3 class="head">Iris</h3>
 			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
 			    </li>
-			    <li class="item">
+			    <li class="item clearfix">
 			    	<a href="#"><img src="assets/images/peony.jpeg" alt=""></a>
 			        <h3 class="head">Peony</h3>
 			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
 			    </li>
-			    <li class="item">
+			    <li class="item clearfix">
 			    	<a href="#"><img src="assets/images/tulip.jpg" alt=""></a>
 			        <h3 class="head">Tulip</h3>
 			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
 			    </li>
-			    <li class="item">
+			    <li class="item clearfix">
 			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
 			    	<h3 class="head">Anemone</h3>
 			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
 			    </li>
-			    <li class="item">
+			    <li class="item clearfix">
 			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
 			        <h3 class="head">Hydrangea</h3>
 			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
 			    </li>
-			    <li class="item">
+			    <li class="item clearfix">
 			    	<a href="#"><img src="assets/images/dahlia.jpg" alt=""></a>
 			        <h3 class="head">Dahlia</h3>
 			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
 			    </li>
-			    <li class="item">
+			    <li class="item clearfix">
 			    	<a href="#"><img src="assets/images/stock_flowers.jpg" alt=""></a>
 			        <h3 class="head">Ranunculus</h3>
 			        <p>This is a description about the flower.  It gives some floral information. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda placeat delectus similique saepe, reiciendis aperiam eligendi distinctio atque a, repellendus recusandae expedita. Nisi odio laudantium numquam veritatis, tempora, rem quibusdam?</p>
 			    </li>
 			</ul>
 		</div>
-		<div class="sidebar">
+		<div class="sidebar" id="flag">
 			<h2>Customer Favorites</h2>
 			<ol>
 				<li>Peony</li>
@@ -73,7 +74,7 @@
 	</div>
 	<footer id="contact">
 		<p>&copy; 2016 LadyDev Flower Shop</p>
-		<ul>
+		<ul class="clearfix">
 			<li><a href="http://facebook.com/ladydevfloral"><img src="assets/images/fb.png" alt=""></a></li>
 			<li><a href="http://twitter.com/ladydevfloral"><img src="assets/images/twitter.png" alt=""></a></li>
 			<li><a href="http://instagram.com/ladydevfloral"><img src="assets/images/instagram.png" alt=""></a></li>
